--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,14 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@api/*": ["src/app/api/*"],
+      "@components/*": ["src/app/components/*"],
+      "@env/*": ["src/environments/*"],
+      "@shared/*": ["src/app/sharedcomponents/*"],
+      "@util/*": ["src/app/sharedcomponents/util/*"]
+    },
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
@@ -18,10 +26,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
