--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "primeicons": "^7.0.0",
     "primeng": "^17.17.0",
     "rxjs": "~7.8.0",
+    "tesseract.js": "^5.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -36,6 +37,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/tesseract.js": "^2.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
