--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@api/*": ["src/app/api/*"],
+      "@api/*": ["src/api/*"],
       "@components/*": ["src/app/components/*"],
       "@env/*": ["src/environments/*"],
       "@shared/*": ["src/app/sharedcomponents/*"],
